--- a/index.html
+++ b/index.html
@@ -30,24 +30,27 @@
 	<body>
 		<!-- Header-->
 		<header>
-			<a href="index.html" title="Ir a la página principal">
+			<a href="/index.html" title="Ir a la página principal">
 				<img id="logo" alt="Logo" src="img/encabezado.png" class="responsive" />
 			</a>
 		</header>
 
 		<!-- NavBar-->
 		<nav id="navbar">
-			<ul>
-				<li><a href="novedades.html">Novedades</a></li>
-				<li><a href="about.html">¿Quiénes somos?</a></li>
-				<li><a href="productos.html">Productos</a></li>
-				<li><a href="galeria.html">Galería</a></li>
-				<li><a href="contacto.html">Contacto</a></li>
+			<div class="menu-hamburguesa">
+				<i class="fas fa-bars" aria-hidden="true"></i>
+			</div>
+			<ul class="lista-sm">
+				<li><a href="/novedades.html">Novedades</a></li>
+				<li><a href="/about.html">¿Quiénes somos?</a></li>
+				<li><a href="/productos.html">Productos</a></li>
+				<li><a href="/galeria.html">Galería</a></li>
+				<li><a href="/contacto.html">Contacto</a></li>
 				<li>
-					<a href="faq.html">Preguntas frecuentes</a>
+					<a href="/faq.html">Preguntas frecuentes</a>
 				</li>
 
-				<li>
+				<li id="buscador">
 					<form class="form-inline my-2 my-lg-0">
 						<input
 							class="form-control mr-sm-2"
@@ -60,28 +63,27 @@
 						</button>
 					</form>
 				</li>
-				<li>
-					<a href="https://www.facebook.com/TakiOngoyBijouterie"
-						><img
-							src="https://img.icons8.com/fluent/23/000000/facebook-new.png"
-					/></a>
-				</li>
-				<li>
-					<a href="https://www.instagram.com/takiongoybijouterie/?hl=es-la"
-						><img
-							src="https://img.icons8.com/fluent/23/000000/instagram-new.png"
-					/></a>
-				</li>
-				<li>
-					<a href="https://wireframe.cc/AW4k9w"
-						><img
-							src="https://img.icons8.com/fluent/23/000000/shopping-cart-loaded.png"
-					/></a>
-				</li>
+				<div id="redes">
+					<li>
+						<a href="https://www.facebook.com/TakiOngoyBijouterie"
+							><img
+								src="https://img.icons8.com/fluent/23/000000/facebook-new.png"
+						/></a>
+					</li>
+					<li>
+						<a href="https://www.instagram.com/takiongoybijouterie/?hl=es-la"
+							><img
+								src="https://img.icons8.com/fluent/23/000000/instagram-new.png"
+						/></a>
+					</li>
+					<li>
+						<a href="https://wireframe.cc/AW4k9w"
+							><img
+								src="https://img.icons8.com/fluent/23/000000/shopping-cart-loaded.png"
+						/></a>
+					</li>
+				</div>
 			</ul>
-			<div class="menu-hamburguesa">
-				<i class="fas fa-bars" aria-hidden="true"></i>
-			</div>
 		</nav>
 		<div id="carrousel">
 			<ul>
@@ -117,5 +119,37 @@
 			</p>
 		</div>
 		<footer>Taki Ongoy - Sitio en desarrollo - Kaku's company</footer>
+		<!-- Cargo JQUERY del servidor de google -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<!-- Hago que JQery interactue con el sitio web -->
+		<script>
+			$(document).ready(function () {
+				/* Aca ponemos el codigo js que usa jquery (para programar eventos) */
+				configurarInicio();
+				$(".menu-hamburguesa").click(function (e) {
+					$("#navbar ul").toggleClass("lista-sm");
+				});
+
+				function configurarInicio() {
+					var urlPath = window.location.pathname; /* Obtengo el path */
+					console.log(urlPath);
+					$("nav a").each(function () {
+						var href = $(this).attr(
+							"href"
+						); /* obtengo el atributo href de cada a del nav */
+						console.log(href);
+						var indice =
+							urlPath.length -
+							href.length; /* me quedo con la parte que me interesa */
+						if (urlPath.substring(indice) === href) {
+							/* si ambas partes son iguales */
+							$(this)
+								.closest("li")
+								.addClass("active"); /* agrego la clase que implemente en css */
+						}
+					});
+				}
+			});
+		</script>
 	</body>
 </html>
